updated config.yml title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Courseware as Code # The name you want your course to have
-description: A Jekyll theme for education # A short description of your course
+title: Pj Demo # The name you want your course to have
+description: a demo # A short description of your course
 
 ###
 # Deployment and template variables below
