--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,10 @@ description: a demo # A short description of your course
 # Deployment and template variables below
 # No need to modify them in most cases
 ###
-baseurl: "/$CI_PROJECT_NAME"
-url: "https://$CI_PROJECT_NAMESPACE.gitlab.io"
+baseurl: "workshops/metzin-around-university-frontend-style"
+url: "https://devops-education.gitlab.io/"
 
 # Footer "Edit this page on Gitlab" link text
-gl_edit_repository: "https://gitlab.com/courseware-as-code/courseware-template" # the gitlab URL for your repo
 gl_edit_link: true # show or hide edit this page link
 gl_edit_link_text: "Contribute to this page using Gitlab"
 gl_edit_repository: "$CI_PROJECT_URL" # the gitlab URL for your repo
