--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,14 @@ gl_edit_branch: "main" # the branch that your docs is served from
 gl_edit_view_mode: "edit" # "tree" or "edit" if you want the user to jump into the editor immediately
 
 permalink: pretty
-exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
-, "docs/tests/", "attached_files/slides_markdown", "vendor"
-]
+exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile", "docs/tests/", "attached_files/slides_markdown", "vendor"]
 
 markdown: kramdown
 kramdown:
   math_engine: mathjax
+  syntax_highlighter_opts:
+    block:
+      line_numbers: false
 
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
 color_scheme: nil
@@ -93,11 +94,6 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 
 plugins:
   - jekyll-seo-tag
-
-kramdown:
-  syntax_highlighter_opts:
-    block:
-      line_numbers: false
 
 compress_html:
   clippings: all
