--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,12 @@
-title: Pj Demo # The name you want your course to have
-description: a demo # A short description of your course
+title: Pj Metz's Portfolio 
+description: The content Pj created for GitLab all in one place
 
 ###
 # Deployment and template variables below
 # No need to modify them in most cases
 ###
-baseurl: "workshops/examples/metzin-around-university-frontend-style"
-url: "https://devops-education.gitlab.io/"
-
-# Footer "Edit this page on Gitlab" link text
-gl_edit_link: true # show or hide edit this page link
-gl_edit_link_text: "Contribute to this page using Gitlab"
-gl_edit_repository: "$CI_PROJECT_URL" # the gitlab URL for your repo
-gl_edit_branch: "main" # the branch that your docs is served from
-gl_edit_view_mode: "edit" # "tree" or "edit" if you want the user to jump into the editor immediately
+baseurl: "metzinaround/portfolio"
+url: "https://metzinaround.gitlab.io/"
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile", "docs/tests/", "attached_files/slides_markdown", "vendor"]
@@ -26,7 +19,7 @@ kramdown:
       line_numbers: false
 
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
-color_scheme: nil
+color_scheme: "dark"
 
 # Regression tests
 # By default, the pages in /docs/tests are excluded when the ste is built.
