--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: The content Pj created for GitLab all in one place
 # No need to modify them in most cases
 ###
 baseurl: "portfolio/"
-url: "https://metzinaround.gitlab.io/"
+url: "https://metzinaround.gitlab.io"
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile", "docs/tests/", "attached_files/slides_markdown", "vendor"]
