--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: The content Pj created for GitLab all in one place
 # Deployment and template variables below
 # No need to modify them in most cases
 ###
-baseurl: "portfolio/"
+baseurl: "/portfolio"
 url: "https://metzinaround.gitlab.io"
 
 permalink: pretty
@@ -35,7 +35,7 @@ color_scheme: "dark"
 
 # Enable or disable the site search
 # Supports true (default) or false
-search_enabled: true
+search_enabled: false
 search:
   # Split pages into sections that can be searched individually
   # Supports 1 - 6, default: 2
@@ -69,7 +69,7 @@ heading_anchors: true
 #    - "//github.com/pmarsceill/just-the-docs"
 
 # Makes Aux links open in a new tab. Default is false
-aux_links_new_tab: false
+aux_links_new_tab: true
 
 # Sort order for navigation links
 # nav_sort: case_insensitive # default, equivalent to nil
@@ -82,7 +82,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: true
 back_to_top_text: "Back to top"
 
-#footer_content: "Copyright &copy; 2017-2020 Patrick Marsceill. Distributed by an <a href=\"https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt\">MIT license.</a>"
+footer_content: '<a href="mailto:metz.pj@gmail.com"> Email Pj |</a> <a href="https://www.linkedin.com/in/metzinaround"> Linkedin |</a> <a href="https://www.twitter.com/metzinaround"> Twitter </a>'
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
